# growatt-client

./: README.md  attributes.md  example.py  gen_reg_markup.py  mqtt.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/scripts/: update_readme.py
.github/workflows/: update_readme.yaml
docs/: calculated.txt
growatt_client/: __init__.py  const.py  growatt.py
