[metadata]
name = growatt_client
author = Henrik Olsson
author_email = henols@gmail.com
description = 
    Python wrapper for getting data asynchronously
    from Growatt inverters 
    via RS232 or RS485 connection and modbus RTU protocol.

long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/henols/growatt-client
project_urls = 
    Bug Tracker = https://github.com/henols/growatt-client/issues
    Source =  https://github.com/henols/growatt-client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pymodbus ==2.3.0
